@@ -15,16 +15,17 @@
  */
 
 apply plugin: EhDeploy
+apply plugin: 'osgi-ds'
 
 dependencies {
   compileOnly project(':impl')
   compileOnly project(':xml')
   implementation project(':clustered:common')
-  implementation "org.terracotta:statistics:$parent.statisticVersion"
   providedImplementation "org.terracotta:entity-client-api:$terracottaApisVersion"
   providedImplementation "org.terracotta:runnel:$terracottaPlatformVersion"
   providedImplementation "org.terracotta:lease-api:$terracottaPlatformVersion"
   providedImplementation "org.terracotta:connection-api:$terracottaApisVersion"
+  compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'
 
   testImplementation project(':api')
   testImplementation project(':impl')
@@ -33,6 +34,7 @@ dependencies {
   testImplementation(project(':clustered:server')) {
     exclude group: 'org.terracotta.internal', module: 'tc-config-parser'
   }
+  testImplementation project(':clustered:test-utils')
   testImplementation "org.terracotta:entity-test-lib:$terracottaPassthroughTestingVersion"
   testImplementation "org.terracotta:passthrough-server:$terracottaPassthroughTestingVersion"
   testImplementation "org.terracotta.internal:common:$terracottaCoreVersion"
@@ -40,18 +42,8 @@ dependencies {
   testImplementation (group: 'org.codehaus.btm', name: 'btm', version: '2.1.4') {
     exclude group:'org.slf4j', module:'slf4j-api'
   }
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
-}
-
-compileJava {
-  options.compilerArgs += ['-Xlint:-serial,-rawtypes']
-}
-
-compileTestJava {
-  options.compilerArgs += ['-Xlint:-serial,-rawtypes']
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
+  testImplementation "org.awaitility:awaitility:3.1.6"
+  testImplementation ("org.terracotta:statistics:$parent.statisticVersion")
 }
