@@ -16,7 +16,8 @@
 
 group = 'org.ehcache'
 
-apply plugin: EhOsgi
+apply plugin: 'biz.aQute.bnd.builder'
+apply plugin: 'osgi-ds'
 apply plugin: EhPomMangle
 
 dependencies {
@@ -24,11 +25,13 @@ dependencies {
   api project(':core')
   implementation project(':impl')
   implementation project(':xml')
-  implementation "org.terracotta:statistics:$parent.statisticVersion"
   implementation (group: 'org.codehaus.btm', name: 'btm', version: '2.1.4') {
     exclude group:'org.slf4j', module:'slf4j-api'
   }
+  compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'
   testImplementation project(':core-spi-test')
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
 
 // For EhPomMangle
@@ -37,10 +40,12 @@ dependencies {
   pomOnlyProvided 'javax.transaction:jta:1.1', 'org.codehaus.btm:btm:2.1.4'
 }
 
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+jar {
+  bnd (
+    'Bundle-SymbolicName': 'org.ehcache.transactions',
+    'Export-Package': 'org.ehcache.transactions.xa.*',
+    'Import-Package': 'bitronix.tm.*;resolution:=optional, javax.transaction.*;resolution:=optional, org.ehcache.xml.*;resolution:=optional, *',
+  )
 }
 
 project.signing {
